CMAKE_MINIMUM_REQUIRED(VERSION 3.10...3.26)
PROJECT(rvem C)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_STANDARD_REQUIRED ON)

OPTION(RV64 "Build for RISC-V RV64" OFF)
OPTION(M_EXT "Support 'M' Standard Extension" ON)
SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)

# force predictable output directories for the emulator executable
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

ADD_EXECUTABLE(${PROJECT_NAME} 
    src/main.c
    src/cpu/core.c
    src/cpu/csr.c
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE inc)

IF(RV64)
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE RV64)
    IF(M_EXT)
        TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE RV64M)
    ENDIF()
ELSE()
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE RV32)
    IF(M_EXT)
        TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE RV32M)
    ENDIF()
ENDIF()

IF(MSVC)
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE /W4 /WX /O2 /D_CRT_SECURE_NO_WARNINGS)
ELSE()
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror -O3)
ENDIF()

INCLUDE(CheckIPOSupported)
CHECK_IPO_SUPPORTED(RESULT ipo_supported)
IF(ipo_supported)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
ENDIF()