CMAKE_MINIMUM_REQUIRED(VERSION 2.6...4.12)
PROJECT(rvem C)

SET(CMAKE_C_STANDARD 90)
SET(CMAKE_C_STANDARD_REQUIRED ON)

OPTION(RV64 "Build for RISC-V RV64" OFF)
OPTION(M_EXT "Support 'M' Standard Extension" ON)
SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)

# force predictable output directories for the emulator executable
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

# create stdint.h
INCLUDE(CheckTypeSize)
CHECK_TYPE_SIZE("char"  SIZEOF_CHAR)
CHECK_TYPE_SIZE("short" SIZEOF_SHORT)
CHECK_TYPE_SIZE("int"   SIZEOF_INT)
CHECK_TYPE_SIZE("__int64" SIZEOF_INT64)
CHECK_TYPE_SIZE("long"  SIZEOF_LONG)
CHECK_TYPE_SIZE("long long" SIZEOF_LONGLONG)
CHECK_TYPE_SIZE("void*" SIZEOF_VOID_P)
FOREACH(SIZE_VAR SIZEOF_CHAR SIZEOF_SHORT SIZEOF_INT SIZEOF_INT64 SIZEOF_LONG SIZEOF_LONGLONG SIZEOF_VOID_P)
    IF(NOT ${SIZE_VAR})
        SET(${SIZE_VAR} 0)
    ENDIF(NOT ${SIZE_VAR})
ENDFOREACH(SIZE_VAR)
CONFIGURE_FILE(
    "${CMAKE_CURRENT_SOURCE_DIR}/inc/stdint.h.in"
    "${CMAKE_CURRENT_BINARY_DIR}/generated/stdint.h"
)
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/generated")

ADD_EXECUTABLE(${PROJECT_NAME} 
    src/main.c
    src/cpu/core.c
    src/cpu/csr.c
)

INCLUDE_DIRECTORIES(${PROJECT_NAME} inc)

IF(RV64)
    ADD_DEFINITIONS(-DRV64)
    IF(M_EXT)
        ADD_DEFINITIONS(-DRV64M)
    ENDIF(M_EXT)
ELSE(RV64)
    ADD_DEFINITIONS(-DRV32)
    IF(M_EXT)
        ADD_DEFINITIONS(-DRV32M)
    ENDIF(M_EXT)
ENDIF(RV64)

IF(MSVC)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        COMPILE_FLAGS "/W3 /WX /O2 /D_CRT_SECURE_NO_WARNINGS")
ELSE(MSVC)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES 
        COMPILE_FLAGS "-Wall -Werror -O3")
ENDIF(MSVC)

INCLUDE(CheckIPOSupported OPTIONAL RESULT_VARIABLE included_path)
IF(included_path)
    CHECK_IPO_SUPPORTED(RESULT ipo_supported)
    IF(ipo_supported)
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
    ENDIF(ipo_supported)
ENDIF(included_path)